objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activities__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_BL__c</fullName>
        <label>Activity BL</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wind</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>T&amp;D</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Origination</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Distributed</fullName>
                    <isActive>false</isActive>
                    <label>Distributed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Category__c</fullName>
        <label>Activity Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Branding</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Reputation</fullName>
                </value>
                <value>
                    <fullName>Technical Deliverables</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Type2__c</fullName>
        <description>https://help.salesforce.com/articleView?id=000004232&amp;language=en_US&amp;type=1</description>
        <inlineHelpText>Used just for Reporting purposes</inlineHelpText>
        <label>Activity Type2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendees_List__c</fullName>
        <inlineHelpText>A list of all the Contacts associated to this Activity. 
This field will automatically populate when more than 1 Contact is related to the Task, or Event.</inlineHelpText>
        <label>Attendee List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_feedback_Type__c</fullName>
        <description>Hidden EMEA field. Eventually delete or merge with &quot;Meeting Outcome&quot;</description>
        <label>Client feedback Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Areas for Improvement/innovation</fullName>
                </value>
                <value>
                    <fullName>Competitors</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>Related to a Service Offered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_feedback_description__c</fullName>
        <label>Client feedback description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is the old ID field from the EMEA SF Org</description>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Feedback_Impact_on_account_relationship__c</fullName>
        <label>Feedback Impact on account relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investor_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investor Activity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Outcome__c</fullName>
        <label>Meeting Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Not Interested</fullName>
                </value>
                <value>
                    <fullName>Follow Up Meeting Required</fullName>
                </value>
                <value>
                    <fullName>Opportunity Created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <formula>TEXT(Account.Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Tier</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>